--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-    "name" : "fullstack-capstone",
+    "name": "fullstack-capstone",
     "version": "1.0.0",
     "description": "Project to apply my knowledge of HTML,CSS,Javascript,Node,Express,React,React-Redux",
     "main": "index.js",
     "scripts": {
-    "test": "test"
+        "test": "test"
     },
     "repository": {
-    "type": "git",
-    "url": "git+https://github.com/spoofBlue/Fullstack-Capstone.git"
+        "type": "git",
+        "url": "git+https://github.com/spoofBlue/Fullstack-Capstone.git"
     },
     "keywords": [
-    "Javascript",
-    "Node",
-    "Express",
-    "Mongo",
-    "React",
-    "React-Redux"
+        "Javascript",
+        "Node",
+        "Express",
+        "Mongo",
+        "React",
+        "React-Redux"
     ],
     "author": "Cory Nanni",
     "license": "ISC",
     "bugs": {
-    "url": "https://github.com/spoofBlue/Fullstack-Capstone/issues"
+        "url": "https://github.com/spoofBlue/Fullstack-Capstone/issues"
     },
     "homepage": "https://github.com/spoofBlue/Fullstack-Capstone#readme",
     "dependencies": {
-    "node": "^10.11.0"
+        "express": "^4.16.4",
+        "node": "^10.11.0"
     }
 }
